--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=banco_simulacion
+
+spring.datasource.url=jdbc:mysql://localhost:3306/banco_simulacion
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.drive-class=com.mysql.cj.jdbc.Drivers
